<resources>
    <string name="app_name">HeartFit</string>
    <string name="start_scan">Start Scan</string>
    <string name="add">Add</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="show">Show</string>
    <string name="x_kg">%1$.2f kg</string>
    <string name="body_weight">Body Weight</string>
    <string name="body_fat_percentage">Body Fat Percentage</string>
    <string name="insert_weight">Insert Weight</string>
    <string name="select_date">Select Date</string>
    <string name="check">Check</string>
    <string name="select_time">Select Time</string>
    <string name="resistance_type_unknown">Unknown</string>
    <string name="resistance_type_barbell">Barball</string>
    <string name="resistance_type_cable">Cable</string>
    <string name="resistance_type_dumbbell">Dumbbell</string>
    <string name="resistance_type_kettlebell">Kettlebell</string>
    <string name="resistance_type_machine">Machine</string>
    <string name="resistance_type_body">Body</string>
    <string name="workout_exercises_pushup">Pushup</string>
    <string name="workout_exercises_close_grip_pushup">Close Grip Pushup</string>
    <string name="workout_exercises_pike_pushup">Pike Pushup</string>
    <string name="workout_exercises_bench_press">Bench Press</string>
    <string name="workout_exercises_incline_bench_press">Incline Bench Press</string>
    <string name="workout_exercises_decline_bench_press">Decline Bench Press</string>
    <string name="workout_exercises_close_grip_bench_press">Close Grip Bench Press</string>
    <string name="workout_exercises_shoulder_press">Shoulder Press</string>
    <string name="workout_exercises_chest_dip">Chest Dip</string>
    <string name="workout_exercises_triceps_dip">Triceps Dip</string>
    <string name="workout_exercises_dip">Dip</string>
    <string name="workout_exercises_pullover">Pullover</string>
    <string name="workout_exercises_fly_reverse">Fly Reverse</string>
    <string name="workout_exercises_fly">Fly</string>
    <string name="repititions">Repititions</string>
    <string name="resistance">Resistance</string>
    <string name="resistance_type">Resistance Type</string>
    <string name="workout_exercises_jm_press">JM Press</string>
    <string name="workout_exercises_squat">Squat</string>
    <string name="workout_exercises_leg_press">Leg Press</string>
    <string name="workout_exercises_leg_curl">Leg Curl</string>
    <string name="workout_exercises_leg_extension">Leg Extension</string>
    <string name="workout_exercises_wall_sit">Wall Sit</string>
    <string name="workout_exercises_step_up">Step up</string>
    <string name="workout_exercises_deadlift">Deadlift</string>
    <string name="workout_exercises_single_leg_deadlift">Single Leg Deadlift</string>
    <string name="workout_exercises_straight_leg_deadlift">Straight Leg Deadlift</string>
    <string name="workout_exercises_rdl_deadlift">RDL Deadlift</string>
    <string name="workout_exercises_lunge">Lunge</string>
    <string name="workout_exercises_rear_lunge">Rear Lunge</string>
    <string name="workout_exercises_side_lunge">Side Lunge</string>
    <string name="workout_exercises_situp">Situp</string>
    <string name="workout_exercises_crunch">Crunch</string>
    <string name="workout_exercises_leg_raise">Leg Raise</string>
    <string name="workout_exercises_hip_raise">Hip Raise</string>
    <string name="workout_exercises_v_ups">V Ups</string>
    <string name="workout_exercises_twisting_situp">Twisting Situp</string>
    <string name="workout_exercises_twisting_crunch">Twisting Crunch</string>
    <string name="workout_exercises_plank">Plank</string>
    <string name="workout_exercises_side_plank">Side Plank</string>
    <string name="workout_exercises_hip_thrust">Hip Thrust</string>
    <string name="workout_exercises_single_leg_hip_bridge">Single Leg Hip Bridge</string>
    <string name="workout_exercises_hip_extension">Hip Extension</string>
    <string name="workout_exercises_russian_twist">Russian Twist</string>
    <string name="workout_exercises_swing">Swing</string>
    <string name="workout_exercises_calf_raise">Calf Raise</string>
    <string name="workout_exercises_standing_calf_raise">Standing Calf Raise</string>
    <string name="workout_exercises_seated_calf_raise">Seated Calf Raise</string>
    <string name="workout_exercises_calf_press">Calf Press</string>
    <string name="workout_exercises_thruster">Thruster</string>
    <string name="workout_exercises_jumping_jack">Jumping Jacks</string>
    <string name="workout_exercises_burpee">Burpee</string>
    <string name="workout_exercises_high_knee_run">High Knee Run</string>
    <string name="workout_exercises_pike_press">Pike Press</string>
    <string name="workout_exercises_arnold_press">Arnold Press</string>
    <string name="workout_exercises_military_press">Military Press</string>
    <string name="workout_exercises_lateral_raise">Lateral Raise</string>
    <string name="workout_exercises_front_raise">Front Raise</string>
    <string name="workout_exercises_rear_lateral_raise">Rear Lateral Raise</string>
    <string name="workout_exercises_clean">Clean</string>
    <string name="workout_exercises_clean_jerk">Clean Jerk</string>
    <string name="workout_exercises_hang_clean">Hang Clean</string>
    <string name="workout_exercises_power_clean">Power Clean</string>
    <string name="workout_exercises_hang_power_clean">Hang Power Clean</string>
    <string name="workout_exercises_row">Row</string>
    <string name="workout_exercises_upright_row">Upright Row</string>
    <string name="workout_exercises_high_row">High Row</string>
    <string name="workout_exercises_pullup">Pullup</string>
    <string name="workout_exercises_chinup">Chinup</string>
    <string name="workout_exercises_pulldown">Pulldown</string>
    <string name="workout_exercises_shrug">Shrug</string>
    <string name="workout_exercises_back_extension">Back Extension</string>
    <string name="workout_exercises_good_morning">Good Morning</string>
    <string name="workout_exercises_bicep_curl">Bicep Curl</string>
    <string name="workout_exercises_triceps_extension">Triceps Extension</string>
    <string name="workout_exercises_unknown">Unknown Exercise</string>
    <string name="workout_exercise">Workout Exercise</string>
    <string name="date_and_time">Date and Time</string>
    <string name="description_insert_workout_exercise">Insert the information about your exercise below</string>
    <string name="weight_unit_lbs">lbs</string>
    <string name="weight_unit_kilo">kg</string>
    <string name="time_workout">Time Workout</string>
    <string name="time_exercise">Time Exercise</string>
    <string name="duration">Duration</string>
    <string name="duration_in_seconds">Duration in seconds</string>
    <string name="cancel">Cancel</string>
    <string name="time_exercise_description_short">Time your exercise</string>
    <string name="start">Start</string>
    <string name="end_time">End Time</string>
    <string name="calories_expended">Calories expended</string>
    <string name="heartrate">Heartrate</string>
    <string name="average">Average</string>
    <string name="maximum">Maximum</string>
    <string name="minimum">Minimum</string>
    <string name="x_bpm">%.2f BPM</string>
    <string name="step_count">Step Count</string>
    <string name="x_steps">%d steps</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="submitted">Submitted</string>
    <string name="error_occured">Error Occured</string>
    <string name="claimed">Claimed</string>
    <string name="scan">Scan</string>
    <string name="refresh">Refresh</string>
    <string name="refreshed">Refreshed</string>
    <string name="error_occured_while_refreshing">Error occured while refreshing</string>
    <string name="unclaim">Unclaim</string>
    <string name="workout_exercises">Workout Exercises</string>
    <string name="delete">Delete</string>
    <string name="questionaire_delete_workout">Do you realy want to delete this workout?</string>
    <string name="ok">Ok</string>
    <string name="synchronize">Synchronize</string>
    <string name="not_submitted">Not submitted</string>
    <string name="selected">Selected</string>
</resources>
