<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/add"
          android:id="@+id/menu_add"
          android:icon="@drawable/ic_add_black_24dp"
          xmlns:app="http://schemas.android.com/apk/res-auto"
          app:showAsAction="always"/>
    <item android:title="@string/synchronize"
          android:id="@+id/menu_sync"
          android:icon="@drawable/ic_add_black_24dp"
          xmlns:app="http://schemas.android.com/apk/res-auto"
          app:showAsAction="never"/>
    <item android:title="@string/delete"
          android:id="@+id/menu_delete"
          android:icon="@drawable/ic_add_black_24dp"
          xmlns:app="http://schemas.android.com/apk/res-auto"
          app:showAsAction="never"/>
</menu>