<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_horizontal"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginEnd="@dimen/layout_margin_horizontal"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtSelectDate"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            app:layout_constraintEnd_toStartOf="@id/txtSelectTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

        <TextView
            android:id="@+id/txtSelectTime"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtSelectDate"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSelectDate"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Select Date"
            app:layout_constraintEnd_toEndOf="@id/txtSelectDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtSelectDate"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSelectTime"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Select Time"
            app:layout_constraintEnd_toEndOf="@id/txtSelectTime"
            app:layout_constraintStart_toStartOf="@id/txtSelectTime"
            app:layout_constraintTop_toBottomOf="@id/txtSelectTime"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/switchSendWeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSelectDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editWeight"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/body_weight"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/switchSendWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch"
            app:layout_constraintBottom_toBottomOf="@id/textInputLayoutWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutWeight"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/switchSendFat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutWeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFat"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/body_fat_percentage"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/switchSendFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch"
            app:layout_constraintBottom_toBottomOf="@id/textInputLayoutFat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutFat"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>