<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="600dp"
    android:paddingBottom="@dimen/layout_margin_bottom"
    android:maxHeight="400dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_clear_black_24dp"
        app:title="@string/insert_weight"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/layout_margin_horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/layout_margin_horizontal"/>

    <TextView
        android:id="@+id/txtTitle"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/insert_weight"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/txtSelectDate"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        app:layout_constraintEnd_toStartOf="@id/txtSelectTime"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

    <TextView
        android:id="@+id/txtSelectTime"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toEndOf="@id/txtSelectDate"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectDate"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:text="Select Date"
        app:layout_constraintEnd_toEndOf="@id/txtSelectDate"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/txtSelectDate"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectTime"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:text="Select Time"
        app:layout_constraintEnd_toEndOf="@id/txtSelectTime"
        app:layout_constraintStart_toStartOf="@id/txtSelectTime"
        app:layout_constraintTop_toBottomOf="@id/txtSelectTime"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/btnSelectDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editWeight"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body_weight"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>